generate controller using oapi-codegen
